--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-
-<p>
-  Start editing to see some magic happen :)
-</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Core.theme </mat-card-title>
+    <mat-card-subtitle>This code is brought to you by Elwood Berry @www.elwoodberry.com</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+  <img mat-card-image src="https://image.shutterstock.com/image-vector/core-logo-design-vector-technology-260nw-1493139665.jpg">
+  <mat-card-content>Content Goes Here.</mat-card-content>
+  <mat-card-actions>Actions Go Here</mat-card-actions>
+  <mat-card-footer>Footer Goes Here</mat-card-footer>
+</mat-card>
