--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
-<mat-card>
-  <mat-card-header>
+<mat-card style="width: 300px; margin: 50px auto; box-shadow: none;">
+
+  <div style="overflow: hidden; height: 200px; border-bottom: 1px solid; margin-bottom: 25px;">
+    <img mat-card-image src="https://image.shutterstock.com/image-vector/core-logo-design-vector-technology-260nw-1493139665.jpg">
+  </div>
+
+  <mat-card-header style="text-align: center;">
     <mat-card-title>Core.theme </mat-card-title>
-    <mat-card-subtitle>This code is brought to you by Elwood Berry @www.elwoodberry.com</mat-card-subtitle>
+    <mat-card-subtitle>This code is brought to you by Elwood Berry @ www.elwoodberry.com</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-  <img mat-card-image src="https://image.shutterstock.com/image-vector/core-logo-design-vector-technology-260nw-1493139665.jpg">
-  <mat-card-content>Content Goes Here.</mat-card-content>
-  <mat-card-actions>Actions Go Here</mat-card-actions>
-  <mat-card-footer>Footer Goes Here</mat-card-footer>
+
 </mat-card>
