--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<!-- 
+APPLICATION NAME GOES HERE
+Author: 'me@elwoodberry.com'
+This code is brought to you by Elwood Berry @www.elwoodberry.com 
+-->
+
 <mat-card style="width: 300px; margin: 50px auto; box-shadow: none;">
 
   <div style="overflow: hidden; height: 200px; border-bottom: 1px solid; margin-bottom: 25px;">
@@ -10,3 +16,10 @@
   </mat-card-header>
 
 </mat-card>
+
+
+<!-- 
+-------------------------------------------------
+Copyright 2021 ElwoodBerry.com LLC. All Rights Reserved.
+Use of this source code is governed by an MIT-style license that can be found in the LICENSE file at http://www.elwoodberry.com 
+-->
