--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@ Author: 'me@elwoodberry.com'
 This code is brought to you by Elwood Berry @www.elwoodberry.com 
 -->
 
-<mat-card style="width: 300px; margin: 50px auto; box-shadow: none;">
+<app-core-select></app-core-select>
+<!-- <mat-card style="width: 300px; margin: 50px auto; box-shadow: none;">
 
   <div style="overflow: hidden; height: 200px; border-bottom: 1px solid; margin-bottom: 25px;">
     <img mat-card-image src="https://image.shutterstock.com/image-vector/core-logo-design-vector-technology-260nw-1493139665.jpg">
@@ -15,8 +16,7 @@ This code is brought to you by Elwood Berry @www.elwoodberry.com
     <mat-card-subtitle>This code is brought to you by Elwood Berry @ www.elwoodberry.com</mat-card-subtitle>
   </mat-card-header>
 
-</mat-card>
-
+</mat-card> -->
 
 <!-- 
 -------------------------------------------------
